// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contract Details - Line Item LineItem Snapshot match when data is empty 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-iacao3-MuiGrid-root"
      data-testid="row_undefined"
      id="row_undefined"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1ilpy0i-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 css-15dcrri-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-1vroofo-MuiTypography-root"
              data-testid="sequence-number"
            >
              0
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-ttbnr1-MuiGrid-root"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              data-testid="product-picture"
              src="notfound.png"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1q478d5-MuiTypography-root"
          data-testid="mfr-name"
        />
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-efujjh-MuiTypography-root"
          data-testid="product-name"
        />
        <div
          class="MuiGrid-root MuiGrid-container css-1uyvchb-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          />
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root noprint css-1m34eg0-MuiButtonBase-root-MuiButton-root"
          data-testid="contract-line-item-button0"
          tabindex="0"
          type="button"
        >
          Show Details
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-sergpw-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1y3098r-MuiTypography-root"
              data-testid="product-price"
            >
              $0.00
               
              ea
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1y3098r-MuiTypography-root"
              data-testid="contract-quantity"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1y3098r-MuiTypography-root"
              data-testid="released-quantity"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-cti7j4-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1y3098r-MuiTypography-root"
              data-testid="shipped-to-date"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-2 css-1rdc4yd-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-1oeflo8-MuiGrid-root"
            >
              <div
                class="number-input__container full-width"
              >
                <div
                  class="number-input__button-container small"
                  style="width: 1.25rem;"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-down"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="RemoveIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </button>
                </div>
                <input
                  class="number-input__input small"
                  data-testid="contract-qty-input0"
                  min="0"
                  value="0"
                />
                <div
                  class="number-input__button-container small"
                  style="width: 1.25rem;"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-up"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-shz08v-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Contract Details - Line Item Loading LineItem Snapshot match 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-iacao3-MuiGrid-root"
      data-testid="row_test0"
      id="row_test0"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1ilpy0i-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 css-15dcrri-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 24px; height: 24px;"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-ttbnr1-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 100%;"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="height: 32px;"
        />
        <div
          class="MuiGrid-root MuiGrid-container css-1uyvchb-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
            >
              Part#
               
              <div
                class="MuiTypography-root MuiTypography-body1 css-1pki3pl-MuiTypography-root"
                data-testid="part-number"
              >
                TESTPART1
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="height: 24px;"
            />
          </div>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root Mui-disabled noprint css-1m34eg0-MuiButtonBase-root-MuiButton-root"
          data-testid="contract-line-item-button0"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Show Details
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-sergpw-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 36px;"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 36px;"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 36px;"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-cti7j4-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 36px;"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-2 css-1rdc4yd-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-1oeflo8-MuiGrid-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                style="height: 36px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-shz08v-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Contract Details - Line Item Normal LineItem Snapshot match 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-iacao3-MuiGrid-root"
      data-testid="row_test0"
      id="row_test0"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1ilpy0i-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 css-15dcrri-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-1vroofo-MuiTypography-root"
              data-testid="sequence-number"
            >
              0
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-ttbnr1-MuiGrid-root"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              data-testid="product-picture"
              src="https://images.tradeservice.com/ProductImages/DIR100108/OOATEY_31911_SML.jpg"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1q478d5-MuiTypography-root"
          data-testid="mfr-name"
        >
          Test Brand 1
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-efujjh-MuiTypography-root"
          data-testid="product-name"
        >
          Test Item 1
        </div>
        <div
          class="MuiGrid-root MuiGrid-container css-1uyvchb-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
            >
              Part#
               
              <div
                class="MuiTypography-root MuiTypography-body1 css-1pki3pl-MuiTypography-root"
                data-testid="part-number"
              >
                TESTPART1
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
            >
              MFR#
               
              <div
                class="MuiTypography-root MuiTypography-body1 css-1pki3pl-MuiTypography-root"
                data-testid="mfr-number"
              >
                 
                TB1-001-TI1
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root noprint css-1m34eg0-MuiButtonBase-root-MuiButton-root"
          data-testid="contract-line-item-button0"
          tabindex="0"
          type="button"
        >
          Show Details
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-sergpw-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1y3098r-MuiTypography-root"
              data-testid="product-price"
            >
              $1.99
               
              ea
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1y3098r-MuiTypography-root"
              data-testid="contract-quantity"
            >
              123
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-rscx8u-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1y3098r-MuiTypography-root"
              data-testid="released-quantity"
            >
              52
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-cti7j4-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1y3098r-MuiTypography-root"
              data-testid="shipped-to-date"
            >
              49
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-2 css-1rdc4yd-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-1oeflo8-MuiGrid-root"
            >
              <div
                class="number-input__container full-width"
              >
                <div
                  class="number-input__button-container small"
                  style="width: 1.25rem;"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-down"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="RemoveIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </button>
                </div>
                <input
                  class="number-input__input small"
                  data-testid="contract-qty-input0"
                  min="0"
                  value="0"
                />
                <div
                  class="number-input__button-container small"
                  style="width: 1.25rem;"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-up"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-shz08v-MuiDivider-root"
    />
  </div>
</div>
`;
